<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile"

    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/promain"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="65dp"

                android:orientation="vertical">

                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-1dp"
                    android:layout_marginTop="-5dp"
                    android:background="@color/transparent"
                    app:icon="@drawable/baseline_keyboard_backspace_24"
                    app:iconTint="?attr/colorOnBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/profilem"
                        android:layout_width="210dp"
                        android:layout_height="192dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/man" />

                    <ImageView
                        android:id="@+id/profilew"
                        android:layout_width="210dp"
                        android:layout_height="192dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/woman" />

                </LinearLayout>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/username"
                    android:textSize="20dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="30"
                    app:endIconMode="clear_text"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_background"
                        android:hint="@string/xxxxx"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/date"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/gender_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="150dp"
                        android:text="@string/gender"
                        android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/date_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:background="@color/transparent"
                        android:text="@string/select_date"
                        android:textColor="?attr/colorOnBackground" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="75dp">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="134dp"
                            android:layout_height="35dp"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="134dp"
                            android:layout_height="35dp"
                            android:text="@string/female" />
                    </RadioGroup>

                </LinearLayout>

                <TextView
                    android:id="@+id/address_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="-20dp"
                    android:text="@string/address"
                    android:textSize="20dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="30"
                    app:endIconMode="clear_text"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/edit_background"
                        android:hint="@string/street"
                        android:inputType="textPostalAddress"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/email_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/e_mail"
                    android:textSize="20dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="30"
                    app:endIconMode="clear_text"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/edit_background"
                        android:hint="@string/gmail_com"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/phone_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/phone_number"
                    android:textSize="20dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:ems="11"
                    app:counterMaxLength="11"
                    app:endIconMode="clear_text"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/edit_background"
                        android:hint="@string/_201xxxxxxxx"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/update"
                    android:layout_width="220dp"
                    android:layout_height="53dp"
                    android:layout_gravity="center"
                    android:text="@string/update"
                    android:textSize="20dp" />


            </LinearLayout>


        </RelativeLayout>


    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        android:background="?attr/colorPrimary"
        app:itemIconSize="30dp"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>