<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                app:icon="@drawable/baseline_keyboard_backspace_24"
                app:iconTint="?attr/colorOnBackground" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/username"
                android:textSize="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:endIconMode="clear_text"
                android:ems="30"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:background="@drawable/edit_background"
                    android:inputType="text"
                    android:hint="@string/xxxxx"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/password"
                android:textSize="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:endIconMode="clear_text"
                android:ems="30"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/semi_trans_grey"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:background="@drawable/edit_background"
                    android:inputType="textPassword"
                    android:hint="@string/xxxxx"/>

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/confirm_password"
                android:textSize="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:endIconMode="clear_text"
                android:ems="30"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/semi_trans_grey"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:background="@drawable/edit_background"
                    android:inputType="textPassword"
                    android:hint="@string/xxxxx"/>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/gender_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Way To Pay"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="29dp"
                    android:layout_marginBottom="29dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/Cash"
                        android:layout_width="134dp"
                        android:layout_height="35dp"
                        android:text="Cash" />

                    <RadioButton
                        android:id="@+id/visa"
                        android:layout_width="134dp"
                        android:layout_height="35dp"
                        android:text="Visa" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/hidden"
                android:visibility="gone"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Card's Owner name"
                    android:textSize="20dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:endIconMode="clear_text"
                    android:ems="30"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:hintEnabled="false"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cardname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:background="@drawable/edit_background"
                        android:inputType="text"
                        android:hint="@string/xxxxx"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Card's Number"
                    android:textSize="20dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:endIconMode="clear_text"
                    android:ems="30"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:hintEnabled="false"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cardnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:background="@drawable/edit_background"
                        android:inputType="text"
                        android:hint="@string/xxxxx"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="CVV"
                        android:textSize="20dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        app:endIconMode="clear_text"
                        android:ems="30"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:hintEnabled="false"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/cardcvv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:hint="@string/xxxxx"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/confirm"
                android:layout_width="220dp"
                android:layout_height="53dp"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_alignParentBottom="true"
                android:text="Confirm"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>